<resources>
    <string name="app_name">Lokacar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="ajouter_un_vehicule">Ajouter un véhicule</string>
    <string name="marque">Marque</string>
    <string name="modele">Modèle</string>
    <string name="plaque_d_immatriculation">Plaque d\'immatriculation</string>
    <string name="citadine">Citadine</string>
    <string name="prix_journalier">Prix journalier</string>
    <string name="attelage">Attelage</string>
    <string name="connexion">Connexion</string>
    <string name="ajout_location">Ajout Location</string>
    <string name="dur_e_en_jours">Durée en jours</string>
    <string name="prenom_client">Prenom client</string>
    <string name="nom_client">Nom client</string>
    <string name="t_l_phone_mobile">Téléphone mobile</string>
    <string name="valider">Valider</string>
    <string name="photo">Photo</string>
    <string name="_0_photos_charg_s">0 Photos chargé(s)</string>
    <string name="prix">Prix:</string>
    <string name="prix_total">Prix total:</string>
    <string name="client">Client</string>
    <string name="liste_photos">Liste photos</string>
    <string name="location">Location</string>
    <string name="vehicule">Vehicule</string>
    <string name="chiffre_d_affaire">Chiffre d\'affaire</string>
    <string name="afficher_la_location">Afficher la location</string>
    <string name="louer">Louer</string>
</resources>
