<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutVehiculeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAjoutVehicule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAjouerVehicule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ajouter_un_vehicule"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarAjoutVehicule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMarque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/marque"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAjoutVehicule" />

    <EditText
        android:id="@+id/editTextModele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/modele"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextMarque"
        app:layout_constraintTop_toBottomOf="@+id/editTextMarque" />

    <EditText
        android:id="@+id/editTextPlaque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/plaque_d_immatriculation"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextModele"
        app:layout_constraintTop_toBottomOf="@+id/editTextModele" />

    <EditText
        android:id="@+id/editTextPrixJour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Prix journalier"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlaque" />

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrixJour">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinnerNbPortes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/spinnerCritAir"
                app:layout_constraintStart_toStartOf="@+id/spinnerCritAir"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCritAir" />

            <Spinner
                android:id="@+id/spinnerNbPlaces"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/spinnerCritAir"
                app:layout_constraintEnd_toEndOf="@+id/spinnerCarburant"
                app:layout_constraintStart_toStartOf="@+id/spinnerCarburant"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCarburant" />

            <Spinner
                android:id="@+id/spinnerCarburant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/spinnerNbPlaces"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/spinnerCritAir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/spinnerNbPortes"
                app:layout_constraintEnd_toEndOf="@+id/spinnerNbPlaces"
                app:layout_constraintStart_toStartOf="@+id/spinnerNbPlaces"
                app:layout_constraintTop_toBottomOf="@+id/spinnerNbPlaces" />

            <Switch
                android:id="@+id/switchCitadine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Switch"
                app:layout_constraintBottom_toTopOf="@+id/switchAttelage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switchAttelage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Switch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/switchCitadine"
                app:layout_constraintTop_toBottomOf="@+id/switchCitadine" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>